# tsdict

./: .gitignore  AGENTS.md  LICENSE  PROPOSAL.md  README.md  pyproject.toml  verify_defaults.py
docs/: Makefile  _config.yml  _toc.yml  api.rst  development.md  index.md  installation.md  usage.md
tests/: __init__.py  conftest.py  test_convert.py  test_core.py  test_io.py  test_stats.py
tsdict/: __init__.py  _version.py  convert.py  core.py  flags.py  io.py  stats.py
tsgroup/: __init__.py  _version.py  convert.py  core.py  flags.py  io.py  stats.py
tskit_multichrom/: __init__.py  _version.py  convert.py  core.py  flags.py  io.py  stats.py
tskit_multichrom.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
