[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tsgroup"
dynamic = ["version"]
description = "TreeSequenceGroup utilities for managing multiple tree sequences across chromosomes"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "tskit>=1.0",
    "numpy>=1.20",
    "tszip>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
]

docs = [
    "jupyter-book<2",
    "sphinx-book-theme",
    "sphinx-copybutton",
    "sphinx-issues",
    "msprime",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tsgroup*"]

[tool.setuptools.dynamic]
version = {attr = "tsgroup._version.tsgroup_version"}

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
